Fix footer spacing at bottom

--- a/scss/partials/components/_cards.scss
+++ b/scss/partials/components/_cards.scss
@@ -9,8 +9,11 @@
         border-radius: 4px;
         padding: 40px;
 
+        min-height: 500px;
+
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
     }
 
 }
@@ -83,4 +86,18 @@
     &__title {
        text-align: center;
     }
+}
+
+.selectInput--big.active {
+    font-size: 28px;
+    transition: all .3s ease-in-out;
+}
+.selectInput--medium.active {
+    font-size: 34px;
+    transition: all .3s ease-in-out;
+}
+.selectInput--small.active {
+    font-size: 18px;
+    padding: 0px;
+    transition: all .3s ease-in-out;
 }
